--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="description" content="Portfolio of Sarah Rollins, Full-Stack Web Developer"/>
     <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Ruby on Rails, HTML, CSS, JavaScript, Web Developer, Le Wagon, Tokyo"/>
     <meta name="author" content="Sarah Rollins"/>
-    <link rel="favicon" href=""/>
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png"/>
     <title>Sarah Rollins</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -27,17 +30,40 @@
 
     <section id="about">
       <div class="header">About Me</div>
-      <div class="description">
-        <img src="" alt="Sarah Rollins" class="profile-image">
-        <p>
-          I am a driven, detail-oriented professional with a fine arts background, and solid
-          design skills. My previous work as an English teacher has allowed me to develop
-          strong communication skills in both English and Japanese.
-        </p>
-        <p>
-          I am a Le Wagon Tokyo Web Development graduate and I am currently seeking a full-time
-          development role.
-        </p>
+      <div class="container">
+
+        <div class="description row">
+          <div class="col-xl-4 col-lg-4 col-sm-12">
+            <img src="images/sarah.jpg" alt="Sarah Rollins" class="profile-image">
+          </div>
+
+          <div class="col-xl-4 col-lg-4 col-sm-12">
+            <p>
+              I am a driven, detail-oriented professional with a fine arts background, and solid
+              design skills. My previous work as an English teacher has allowed me to develop
+              strong communication skills in both English and Japanese.
+            </p>
+            <p>
+              I am a Le Wagon Tokyo Web Development graduate and I am currently seeking a full-time
+              development role.
+            </p>
+          </div>
+
+          <div class="col-xl-2 col-lg-2 col-sm-12 code-icon">
+            <i class="devicon-ruby-plain-wordmark"></i>
+            <i class="devicon-rails-plain-wordmark"></i>
+            <i class="devicon-html5-plain-wordmark"></i>
+            <i class="devicon-css3-plain-wordmark"></i>
+          </div>
+
+          <div class="col-xl-2 col-lg-2 col-sm-12 code-icon">
+            <i class="devicon-javascript-plain"></i>
+            <i class="devicon-postgresql-plain-wordmark"></i>
+            <i class="devicon-git-plain-wordmark"></i>
+            <i class="devicon-github-original-wordmark"></i>
+          </div>
+
+        </div>
       </div>
     </section>
 
@@ -47,6 +73,22 @@
 
     <section id="contact">
       <div class="header">Contact</div>
+      <div class="container">
+        <div class="justify-content-center row">
+          <a target="_blank" href="https://github.com/srollins01">
+            <i class="fa-brands fa-square-github fa-4x m-4"></i>
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/sarah-rollins-sr/">
+            <i class="fa-brands fa-linkedin fa-4x m-4"></i>
+          </a>
+          <a target="_blank" href="mailto:s.rollins751@gmail.com">
+            <i class="fa-solid fa-envelope fa-4x m-4"></i>
+          </a>
+          <a target="_blank" href="">
+            <i class="fa-solid fa-address-card fa-4x m-4"></i>
+          </a>
+        </div>
+      </div>
     </section>
 
 
