added scroll to projects section, edited about section columns

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
           <span style="color: rgb(226, 109, 255); font-weight: 600;"> Sarah Rollins</span>.
           <br>I'm a full-stack developer.
         </div>
-        <a class="js-scroll-trigger">
+        <a id="view-proj" class="white-txt">
           <div class="banner-button">View my projects</div>
+        </a>
+        <a class="white-txt" target="_blank" href="https://github.com/srollins01">
           <div class="banner-button">View my GitHub</div>
         </a>
       </div>
@@ -33,15 +35,16 @@
       <div class="container">
 
         <div class="description row">
-          <div class="col-xl-4 col-lg-4 col-sm-12">
-            <img src="images/sarah.jpg" alt="Sarah Rollins" class="profile-image">
+          <div class="col-xl-3 col-lg-3 col-sm-12">
+            <img src="images/sarah.jpg" alt="Sarah Rollins" class="profile-image mb-4">
           </div>
 
-          <div class="col-xl-4 col-lg-4 col-sm-12">
+          <div class="col-xl-9 col-lg-9 col-sm-12">
             <p>
               I am a driven, detail-oriented professional with a fine arts background, and solid
-              design skills. My previous work as an English teacher has allowed me to develop
-              strong communication skills in both English and Japanese.
+              design skills. Originally from Canada, I moved to Japan in 2018 to pursue career opportunities.
+              My previous work as an English teacher has allowed me to develop strong communication
+              skills in both English and Japanese.
             </p>
             <p>
               I am a Le Wagon Tokyo Web Development graduate and I am currently seeking a full-time
@@ -49,18 +52,15 @@
             </p>
           </div>
 
-          <div class="col-xl-2 col-lg-2 col-sm-12 code-icon">
-            <i class="devicon-ruby-plain-wordmark"></i>
-            <i class="devicon-rails-plain-wordmark"></i>
-            <i class="devicon-html5-plain-wordmark"></i>
-            <i class="devicon-css3-plain-wordmark"></i>
-          </div>
-
-          <div class="col-xl-2 col-lg-2 col-sm-12 code-icon">
-            <i class="devicon-javascript-plain"></i>
-            <i class="devicon-postgresql-plain-wordmark"></i>
-            <i class="devicon-git-plain-wordmark"></i>
-            <i class="devicon-github-original-wordmark"></i>
+          <div class="col code-icon">
+            <i class="devicon-ruby-plain-wordmark p-3"></i>
+            <i class="devicon-rails-plain-wordmark p-3"></i>
+            <i class="devicon-html5-plain-wordmark p-3"></i>
+            <i class="devicon-css3-plain-wordmark p-3"></i>
+            <i class="devicon-javascript-plain p-3"></i>
+            <i class="devicon-postgresql-plain-wordmark p-3"></i>
+            <i class="devicon-git-plain-wordmark p-3"></i>
+            <i class="devicon-github-original-wordmark p-3"></i>
           </div>
 
         </div>
