added project section layout

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <span style="color: rgb(226, 109, 255); font-weight: 600;"> Sarah Rollins</span>.
           <br>I'm a full-stack developer.
         </div>
-        <a id="view-proj" class="white-txt">
+        <a id="view-proj">
           <div class="banner-button">View my projects</div>
         </a>
-        <a class="white-txt" target="_blank" href="https://github.com/srollins01">
+        <a target="_blank" href="https://github.com/srollins01">
           <div class="banner-button">View my GitHub</div>
         </a>
       </div>
@@ -69,6 +69,75 @@
 
     <section id="projects">
       <div class="header">Projects</div>
+      <div class="container">
+        <div class="cards">
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Yasashii</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Characatch</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Movie Watch List</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Japan Article</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Profile Page</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+
+          <div class="project-card">
+            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <h4 class="my-2">Portfolio Page</h4>
+            <p>
+              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+            </p>
+            <a href="" class="card-btn">Live Version</a>
+            <a href="" class="card-btn">View Code</a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="contact">
