completed projects section, added links

--- a/index.html
+++ b/index.html
@@ -72,69 +72,63 @@
       <div class="container">
         <div class="cards">
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/yasashii.png" width="350" height="180" alt="yasashii">
             <h4 class="my-2">Yasashii</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              Automated web translation service for booking clinic appointments in Japan.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://www.yasashii.care/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/chara.png" width="350" height="180" alt="Characatch">
             <h4 class="my-2">Characatch</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              Website for booking mascot costumed-performer services for events.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://characatch.herokuapp.com/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/movies.png" width="350" height="180" alt="Movie Watch List">
             <h4 class="my-2">Movie Watch List</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              Web app for creating lists of your favorite movies, and rating others' lists.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/japantrav.png" width="350" height="180" alt="Japan Travel">
             <h4 class="my-2">Japan Article</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              Medium-inspired article about travel in Japan.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/profile.png" width="350" height="180" alt="Sarah Rollins Profile">
             <h4 class="my-2">Profile Page</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              My personal profile page.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
-            <img src="images/sarah.jpg" width="300" height="200" alt="Sarah Rollins">
+            <img src="images/portfolio.png" width="350" height="180" alt="Sarah Rollins Portfolio">
             <h4 class="my-2">Portfolio Page</h4>
             <p>
-              Site details lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-              lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+              My personal web development portfolio.
             </p>
-            <a href="" class="card-btn">Live Version</a>
-            <a href="" class="card-btn">View Code</a>
+            <a href="https://srollins01.github.io/code-portfolio/" class="card-btn">Live Version</a>
+            <a href="https://github.com/srollins01/code-portfolio" class="card-btn">View Code</a>
           </div>
         </div>
       </div>
@@ -153,7 +147,7 @@
           <a target="_blank" href="mailto:s.rollins751@gmail.com">
             <i class="fa-solid fa-envelope fa-4x m-4"></i>
           </a>
-          <a target="_blank" href="">
+          <a target="_blank" href="https://drive.google.com/file/d/1MP0XIG1x6nWiaEkPIkCkbqmnnt75KssJ/view?usp=sharing">
             <i class="fa-solid fa-address-card fa-4x m-4"></i>
           </a>
         </div>
