--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
     <section id="contact">
       <div class="header">Contact</div>
       <div class="container">
-        <div class="justify-content-center row">
+        <div class="row justify-content-center align-items-center">
           <a target="_blank" href="https://github.com/srollins01">
-            <i class="fa-brands fa-square-github fa-4x m-4"></i>
+            <i class="fa-brands fa-square-github"></i>
           </a>
           <a target="_blank" href="https://www.linkedin.com/in/sarah-rollins-sr/">
-            <i class="fa-brands fa-linkedin fa-4x m-4"></i>
+            <i class="fa-brands fa-linkedin"></i>
           </a>
           <a target="_blank" href="mailto:s.rollins751@gmail.com">
-            <i class="fa-solid fa-envelope fa-4x m-4"></i>
+            <i class="fa-solid fa-envelope"></i>
           </a>
           <a target="_blank" href="https://drive.google.com/file/d/1MP0XIG1x6nWiaEkPIkCkbqmnnt75KssJ/view?usp=sharing">
-            <i class="fa-solid fa-address-card fa-4x m-4"></i>
+            <i class="fa-solid fa-address-card"></i>
           </a>
         </div>
       </div>
