moved links, added glow to project images

--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
           <span style="color: rgb(226, 109, 255); font-weight: 600;"> Sarah Rollins</span>.
           <br>I'm a full-stack developer.
         </div>
+        <div id="banner-links">
+          <a target="_blank" href="https://github.com/srollins01">
+            <i class="fa-brands fa-square-github"></i>
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/sarah-rollins-sr/">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a target="_blank" href="mailto:s.rollins751@gmail.com">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a target="_blank" href="https://drive.google.com/file/d/1MP0XIG1x6nWiaEkPIkCkbqmnnt75KssJ/view?usp=sharing">
+            <i class="fa-solid fa-address-card"></i>
+          </a>
+        </div>
+        <br>
         <a id="view-proj">
           <div class="banner-button">View my projects</div>
-        </a>
-        <a target="_blank" href="https://github.com/srollins01">
-          <div class="banner-button">View my GitHub</div>
         </a>
       </div>
     </div>
@@ -133,27 +145,6 @@
         </div>
       </div>
     </section>
-
-    <section id="contact">
-      <div class="header">Contact</div>
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <a target="_blank" href="https://github.com/srollins01">
-            <i class="fa-brands fa-square-github"></i>
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/sarah-rollins-sr/">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-          <a target="_blank" href="mailto:s.rollins751@gmail.com">
-            <i class="fa-solid fa-envelope"></i>
-          </a>
-          <a target="_blank" href="https://drive.google.com/file/d/1MP0XIG1x6nWiaEkPIkCkbqmnnt75KssJ/view?usp=sharing">
-            <i class="fa-solid fa-address-card"></i>
-          </a>
-        </div>
-      </div>
-    </section>
-
 
     <script src="tsparticles.engine.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-firefly@2/tsparticles.preset.firefly.bundle.min.js"></script>
