edited resume link and about section content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a target="_blank" href="mailto:s.rollins751@gmail.com">
             <i class="fa-solid fa-envelope"></i>
           </a>
-          <a target="_blank" href="https://drive.google.com/file/d/1MP0XIG1x6nWiaEkPIkCkbqmnnt75KssJ/view?usp=sharing">
+          <a target="_blank" href="https://drive.google.com/file/d/1sJlCezkTNgiLXYq_hE0LLFZrrl5M-leK/view?usp=sharing">
             <i class="fa-solid fa-address-card"></i>
           </a>
         </div>
@@ -53,14 +53,15 @@
 
           <div class="col-xl-9 col-lg-9 col-sm-12">
             <p>
-              I am a driven, detail-oriented professional with a fine arts background, and solid
-              design skills. Originally from Canada, I moved to Japan in 2018 to pursue career opportunities.
-              My previous work as an English teacher has allowed me to develop strong communication
-              skills in both English and Japanese.
+              I am a driven, detail-oriented professional with a fine arts degree and solid
+              design skills. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
+              My teaching experience allowed me to develop strong communication
+              skills in both English and Japanese. In 2022, I relocated to Tokyo pursue career opportunities
+              in the education and tech industries.
             </p>
             <p>
-              I am a Le Wagon Tokyo Web Development graduate and I am currently seeking a full-time
-              development role.
+              I am a Le Wagon Tokyo Web Development graduate, and I am currently seeking a full-time position
+              as a member of a dynamic web development team.
             </p>
           </div>
 
