--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <i class="devicon-html5-plain-wordmark p-3"></i>
             <i class="devicon-css3-plain-wordmark p-3"></i>
             <i class="devicon-javascript-plain p-3"></i>
+            <i class="devicon-react-plain p-3"></i>
             <i class="devicon-postgresql-plain-wordmark p-3"></i>
             <i class="devicon-git-plain-wordmark p-3"></i>
             <i class="devicon-github-original-wordmark p-3"></i>
