--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
               in the education and tech industries.
             </p>
             <p>
-              I am a Le Wagon Tokyo Web Development graduate, and I am currently seeking a full-time position
-              as a member of a dynamic web development team.
+              I am a Le Wagon Tokyo Web Development graduate, and I am currently working as an IT Engineer.
             </p>
           </div>
 
