Updated 'Yasashii' live version project link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>
               Automated web translation service for booking clinic appointments in Japan.
             </p>
-            <a href="https://www.yasashii.care/" class="card-btn">Live Version</a>
+            <a href="https://yasashii.herokuapp.com/" class="card-btn">Live Version</a>
             <a href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
           </div>
 
