1. Made all links open in new tab. 2. Updated skill icons/added descriptive text.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Portfolio of Sarah Rollins, Full-Stack Web Developer"/>
-    <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Ruby on Rails, HTML, CSS, JavaScript, Web Developer, Le Wagon, Tokyo"/>
+    <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Ruby on Rails, HTML, CSS, React, JavaScript, Web Developer, Le Wagon, Tokyo"/>
     <meta name="author" content="Sarah Rollins"/>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png"/>
     <title>Sarah Rollins</title>
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
     <div>
       <div id="tsparticles"></div>
@@ -21,6 +22,7 @@
           <span style="color: rgb(226, 109, 255); font-weight: 600;"> Sarah Rollins</span>.
           <br>I'm a full-stack developer.
         </div>
+
         <div id="banner-links">
           <a target="_blank" href="https://github.com/srollins01">
             <i class="fa-brands fa-square-github"></i>
@@ -32,6 +34,7 @@
             <i class="fa-solid fa-envelope"></i>
           </a>
         </div>
+
         <br>
         <a id="view-proj">
           <div class="banner-button">View my projects</div>
@@ -60,20 +63,47 @@
               I am a Le Wagon Tokyo Web Development graduate, and I am currently working as an IT Engineer.
             </p>
           </div>
-
-          <div class="col code-icon">
-            <i class="devicon-ruby-plain-wordmark p-3"></i>
-            <i class="devicon-rails-plain-wordmark p-3"></i>
-            <i class="devicon-html5-plain-wordmark p-3"></i>
-            <i class="devicon-css3-plain-wordmark p-3"></i>
-            <i class="devicon-javascript-plain p-3"></i>
-            <i class="devicon-react-plain p-3"></i>
-            <i class="devicon-postgresql-plain-wordmark p-3"></i>
-            <i class="devicon-git-plain-wordmark p-3"></i>
-            <i class="devicon-github-original-wordmark p-3"></i>
-          </div>
-
         </div>
+
+        <div class="header-martp">Skills</div>
+        <div class="row justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+          <div class="col-6 col-md-3">
+            <i class="devicon-rails-plain code-icon"></i>
+            <p>Ruby on Rails</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-html5-plain code-icon"></i>
+            <p>HTML</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-css3-plain code-icon"></i>
+            <p>CSS</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-javascript-plain code-icon"></i>
+            <p>JavaScript</p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+          <div class="col-6 col-md-3">
+            <i class="devicon-react-plain code-icon"></i>
+            <p class="text-center">React</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-postgresql-plain code-icon"></i>
+            <p>PostgreSQL</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-git-plain code-icon"></i>
+            <p>Git</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-github-original code-icon"></i>
+            <p>Github</p>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -87,8 +117,8 @@
             <p>
               Automated web translation service for booking clinic appointments in Japan.
             </p>
-            <a href="https://yasashii.herokuapp.com/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
+            <a target="_blank" href="https://yasashii.herokuapp.com/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
@@ -97,8 +127,8 @@
             <p>
               Website for booking mascot costumed-performer services for events.
             </p>
-            <a href="https://characatch.herokuapp.com/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
+            <a target="_blank" href="https://characatch.herokuapp.com/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
@@ -107,8 +137,8 @@
             <p>
               Web app for creating lists of your favorite movies, and rating others' lists.
             </p>
-            <a href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
+            <a target="_blank" href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
@@ -117,8 +147,8 @@
             <p>
               Medium-inspired article about travel in Japan.
             </p>
-            <a href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
+            <a target="_blank" href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
@@ -127,8 +157,8 @@
             <p>
               My personal profile page.
             </p>
-            <a href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
+            <a target="_blank" href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
           </div>
 
           <div class="project-card">
@@ -137,8 +167,8 @@
             <p>
               My personal web development portfolio.
             </p>
-            <a href="https://srollins01.github.io/code-portfolio/" class="card-btn">Live Version</a>
-            <a href="https://github.com/srollins01/code-portfolio" class="card-btn">View Code</a>
+            <a target="_blank" href="https://srollins01.github.io/code-portfolio/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/code-portfolio" class="card-btn">View Code</a>
           </div>
         </div>
       </div>
