--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <div class="col-6 col-md-3">
             <i class="devicon-github-original code-icon"></i>
-            <p>Github</p>
+            <p>GitHub</p>
           </div>
         </div>
 
