changed skill icons

--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
             <p class="text-center">React</p>
           </div>
           <div class="col-6 col-md-3">
+            <i class="devicon-typescript-original code-icon"></i>
+            <p>TypeScript</p>
+          </div>
+          <div class="col-6 col-md-3">
             <i class="devicon-postgresql-plain code-icon"></i>
             <p>PostgreSQL</p>
           </div>
           <div class="col-6 col-md-3">
             <i class="devicon-git-plain code-icon"></i>
             <p>Git</p>
-          </div>
-          <div class="col-6 col-md-3">
-            <i class="devicon-github-original code-icon"></i>
-            <p>Github</p>
           </div>
         </div>
 
