Added icons for projects section.

--- a/index.html
+++ b/index.html
@@ -111,12 +111,20 @@
       <div class="header">Projects</div>
       <div class="container">
         <div class="cards">
+
           <div class="project-card">
             <img src="images/yasashii.png" width="320" height="150" alt="yasashii">
             <h4 class="my-2">Yasashii</h4>
             <p>
               Automated web translation service for booking clinic appointments in Japan.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-rails-plain"></i>
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-postgresql-plain"></i>
+            </div>
             <a target="_blank" href="https://yasashii.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
           </div>
@@ -127,6 +135,13 @@
             <p>
               Website for booking mascot costumed-performer services for events.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-rails-plain"></i>
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-postgresql-plain"></i>
+            </div>
             <a target="_blank" href="https://characatch.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
           </div>
@@ -137,6 +152,12 @@
             <p>
               Web app for creating lists of your favorite movies, and rating others' lists.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-rails-plain"></i>
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+              <i class="devicon-javascript-plain"></i>
+            </div>
             <a target="_blank" href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
           </div>
@@ -147,6 +168,11 @@
             <p>
               Medium-inspired article about travel in Japan.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+              <i class="devicon-javascript-plain"></i>
+            </div>
             <a target="_blank" href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
           </div>
@@ -157,6 +183,10 @@
             <p>
               My personal profile page.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+            </div>
             <a target="_blank" href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
           </div>
@@ -167,6 +197,11 @@
             <p>
               My personal web development portfolio.
             </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-html5-plain"></i>
+              <i class="devicon-css3-plain"></i>
+              <i class="devicon-javascript-plain"></i>
+            </div>
             <a target="_blank" href="https://srollins01.github.io/code-portfolio/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/code-portfolio" class="card-btn">View Code</a>
           </div>
