updated about me section and project links

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
           <div class="col-xl-9 col-lg-9 col-sm-12">
             <p>
-              I am a driven, detail-oriented professional with a fine arts degree and solid
-              design skills. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
+              I am a driven, detail-oriented professional specializing in web development, design, and digital illustration. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
               My teaching experience allowed me to develop strong communication
               skills in both English and Japanese. In 2022, I relocated to Tokyo pursue career opportunities
               in the education and tech industries.
@@ -125,7 +124,7 @@
               <i class="devicon-javascript-plain"></i>
               <i class="devicon-postgresql-plain"></i>
             </div>
-            <a target="_blank" href="https://yasashii.herokuapp.com/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://yasashii-care-d8c3a285aefa.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
           </div>
 
@@ -133,7 +132,7 @@
             <img src="images/chara.png" width="320" height="150" alt="Characatch">
             <h4 class="my-2">Characatch</h4>
             <p>
-              Website for booking mascot costumed-performer services for events.
+              Website for booking <i>yuru-kyara</i> (Japanese regional mascots) services for events.
             </p>
             <div class="my-2 code-icon-sml">
               <i class="devicon-rails-plain"></i>
@@ -142,7 +141,7 @@
               <i class="devicon-javascript-plain"></i>
               <i class="devicon-postgresql-plain"></i>
             </div>
-            <a target="_blank" href="https://characatch.herokuapp.com/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://characatch-app-08438e6cbd51.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
           </div>
 
