added tooltips for project stack icons

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
               Automated web translation service for booking clinic appointments in Japan.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-rails-plain"></i>
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
-              <i class="devicon-javascript-plain"></i>
-              <i class="devicon-postgresql-plain"></i>
+              <i class="devicon-rails-plain tooltipicon"></i><span class="tooltiptext">Ruby on Rails</span>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
+              <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
             </div>
             <a target="_blank" href="https://yasashii-care-d8c3a285aefa.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
@@ -135,11 +135,11 @@
               Website for booking <i>yuru-kyara</i> (Japanese regional mascots) services for events.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-rails-plain"></i>
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
-              <i class="devicon-javascript-plain"></i>
-              <i class="devicon-postgresql-plain"></i>
+              <i class="devicon-rails-plain tooltipicon"></i><span class="tooltiptext">Ruby on Rails</span>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
+              <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
             </div>
             <a target="_blank" href="https://characatch-app-08438e6cbd51.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
@@ -152,10 +152,10 @@
               Web app for creating lists of your favorite movies, and rating others' lists.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-rails-plain"></i>
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
-              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-rails-plain tooltipicon"></i><span class="tooltiptext">Ruby on Rails</span>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
             </div>
             <a target="_blank" href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
@@ -168,9 +168,9 @@
               Medium-inspired article about travel in Japan.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
-              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
             </div>
             <a target="_blank" href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
@@ -183,8 +183,8 @@
               My personal profile page.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
             </div>
             <a target="_blank" href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
@@ -197,9 +197,9 @@
               My personal web development portfolio.
             </p>
             <div class="my-2 code-icon-sml">
-              <i class="devicon-html5-plain"></i>
-              <i class="devicon-css3-plain"></i>
-              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
             </div>
             <a target="_blank" href="https://srollins01.github.io/code-portfolio/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/code-portfolio" class="card-btn">View Code</a>
